@@ -1,4 +1,9 @@
 ===SVN==
+ * Changed default of use.title.cachedonly=false
+ * Added new parameter use.title.pyonly=true  to only use pytivo/xml metadata for selectionscreen
+ * Added folder support for push
+ * new config option push.folders=true to turn on pushing into folders
+ * Support multiple --config options on command line
  * Added support for loading streambaby.local.ini in additiojn to streambaby.ini
  * Default is disable pyTivo push (pytivo.ip=)
  * abstracted push interface
